modules/lwjgl/core/src/main/c/libffi/loongarch64/ffitarget.h

typedef enum ffi_abi
  {
    FFI_FIRST_ABI = 0,
    FFI_SYSV,
    FFI_LAST_ABI,
    FFI_DEFAULT_ABI = FFI_SYSV,

  // LWJGL
  FFI_GNUW64 = -1,
  FFI_UNIX64 = -1,
  FFI_EFI64 = -1,
  //FFI_SYSV = -1,
  FFI_STDCALL = -1,
  FFI_THISCALL = -1,
  FFI_FASTCALL = -1,
  FFI_MS_CDECL = -1,
  FFI_PASCAL = -1,
  FFI_REGISTER = -1,
  FFI_VFP = -1,
  FFI_WIN64 = -1,
  } ffi_abi;